# agent-tools

./: .env.example  .mcpbignore  LICENSE  MCP_CONFIG.json  README.md  manifest.json  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
public/: README.md  pyproject.toml  server.py
public/.claude-plugin/: plugin.json
public/resources/: html-reference.md
public/tools/: __init__.py  api.py  auth.py  errors.py
resources/: push-examples.md
resources/api/: html-reference.md
skills/: AUTHENTICATION.md
skills/api/channel-listing/: SKILL.md
skills/api/create-pipeline/: SKILL.md
skills/api/custom-events/: SKILL.md
skills/api/email-lookup/: SKILL.md
skills/api/email-registration/: SKILL.md
skills/api/email-replace/: SKILL.md
skills/api/list-pipelines/: SKILL.md
skills/api/named-users/: SKILL.md
skills/api/open-channel-registration/: SKILL.md
skills/api/push-notification/: SKILL.md
skills/api/sms-lookup/: SKILL.md
skills/api/sms-registration/: SKILL.md
skills/api/tags/: SKILL.md
skills/mobile/migration/: SKILL.md
skills/mobile/sdk-reference/: SKILL.md
skills/wallet/update-wallet-pass/: SKILL.md
skills/workflows/create-custom-event-automation/: SKILL.md
skills/workflows/download-entire-audience/: SKILL.md
skills/workflows/extract-unique-tags-and-attributes/: SKILL.md
skills/workflows/open-channel-middleware/: SKILL.md
skills/workflows/purchase-to-pass-update/: SKILL.md
tools/: api.py  auth.py  build.py  constants.py  elicitation.py  errors.py  migration_fetcher.py  migration_parser.py  validators.py
(+113 files in other folders)
