[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tools"
version = "1.0.0"
description = "Unified Airship agent tools - Push API, builds, migrations, and documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-pptx>=0.6.21"
]

[project.scripts]
airship-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "venv/",
    "*.egg-info/",
    "__pycache__/",
    ".pytest_cache/",
    "cache/",
]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "skills"
"resources" = "resources"
".claude-plugin" = ".claude-plugin"
